Capacitor: Default-Package-ID ersetzt, "ionic capacitor build android" ausgefuehrt

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">KfzKennzeichen</string>
     <string name="title_activity_main">KfzKennzeichen</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="package_name">de.mide.capacitor.kfzkennzeichen</string>
+    <string name="custom_url_scheme">de.mide.capacitor.kfzkennzeichen</string>
 </resources>
