--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">KfzKennzeichen</string>
-    <string name="title_activity_main">KfzKennzeichen</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="app_name">Kfz-Unterscheidungszeichen</string>
+    <string name="title_activity_main">Kfz-Unterscheidungszeichen</string>
+    <string name="package_name">de.eldecker.ionic.kfzunterscheidungszeichen</string>
+    <string name="custom_url_scheme">de.eldecker.ionic.kfzunterscheidungszeichen</string>
 </resources>
